Fix a potential bug on multiple runs and add device tests as well

--- a/tests/catch/unit/device/CMakeLists.txt
+++ b/tests/catch/unit/device/CMakeLists.txt
@@ -20,3 +20,9 @@ set(TEST_SRC
 hip_add_exe_to_target(NAME DeviceTest
                       TEST_SRC ${TEST_SRC}
                       TEST_TARGET_NAME build_tests)
+
+# TODO make this a cmake function
+add_executable(DeviceTestR EXCLUDE_FROM_ALL ${TEST_SRC} $<TARGET_OBJECTS:Main_Object>)
+add_dependencies(build_report DeviceTestR)
+target_link_libraries(DeviceTestR stdc++fs) 
+target_compile_definitions(DeviceTestR PUBLIC HIP_TEST_REPORT_MODE=1)
