--- a/tests/catch/ABM/AddKernels/CMakeLists.txt
+++ b/tests/catch/ABM/AddKernels/CMakeLists.txt
@@ -8,7 +8,9 @@ hip_add_exe_to_target(NAME ABMAddKernels
                       TEST_TARGET_NAME build_tests)
 
 # TODO make this a function
-add_executable(ABMAddKernelsR EXCLUDE_FROM_ALL ${TEST_SRC} $<TARGET_OBJECTS:Main_Object>)
-add_dependencies(build_report ABMAddKernelsR)
-target_link_libraries(ABMAddKernelsR stdc++fs) 
-target_compile_definitions(ABMAddKernelsR PUBLIC HIP_TEST_REPORT_MODE=1)
+add_library(ABMAddKernelsR EXCLUDE_FROM_ALL OBJECT ${TEST_SRC})
+if(HIP_PLATFORM MATCHES "amd")
+    set_property(TARGET ABMAddKernelsR PROPERTY CXX_STANDARD 17)
+else()
+    target_compile_options(ABMAddKernelsR PUBLIC -std=c++17)
+endif()
