--- a/tests/catch/unit/device/CMakeLists.txt
+++ b/tests/catch/unit/device/CMakeLists.txt
@@ -21,8 +21,10 @@ hip_add_exe_to_target(NAME DeviceTest
                       TEST_SRC ${TEST_SRC}
                       TEST_TARGET_NAME build_tests)
 
-# TODO make this a cmake function
-add_executable(DeviceTestR EXCLUDE_FROM_ALL ${TEST_SRC} $<TARGET_OBJECTS:Main_Object>)
-add_dependencies(build_report DeviceTestR)
-target_link_libraries(DeviceTestR stdc++fs) 
-target_compile_definitions(DeviceTestR PUBLIC HIP_TEST_REPORT_MODE=1)
+# TODO make this a function
+add_library(DeviceTestR EXCLUDE_FROM_ALL OBJECT ${TEST_SRC})
+if(HIP_PLATFORM MATCHES "amd")
+    set_property(TARGET DeviceTestR PROPERTY CXX_STANDARD 17)
+else()
+    target_compile_options(DeviceTestR PUBLIC -std=c++17)
+endif()
