--- a/tests/catch/unit/device/CMakeLists.txt
+++ b/tests/catch/unit/device/CMakeLists.txt
@@ -23,6 +23,7 @@ hip_add_exe_to_target(NAME DeviceTest
 
 # TODO make this a function
 add_library(DeviceTestR EXCLUDE_FROM_ALL OBJECT ${TEST_SRC})
+target_compile_definitions(DeviceTestR PUBLIC HIP_TEST_REPORT_MODE=1)
 if(HIP_PLATFORM MATCHES "amd")
     set_property(TARGET DeviceTestR PROPERTY CXX_STANDARD 17)
 else()
