Adding Device Tests

--- a/tests/catch/hipTestMain/CMakeLists.txt
+++ b/tests/catch/hipTestMain/CMakeLists.txt
@@ -32,7 +32,8 @@ endif()
 
 add_executable(Report EXCLUDE_FROM_ALL main.cc
                                       hip_test_context.cc
-                                      $<TARGET_OBJECTS:ABMAddKernelsR>)
+                                      $<TARGET_OBJECTS:ABMAddKernelsR>
+                                      $<TARGET_OBJECTS:DeviceTestR>)
 add_dependencies(build_report Report)
 target_link_libraries(Report stdc++fs) 
 target_compile_definitions(Report PUBLIC HIP_TEST_REPORT_MODE=1)
