Add test to enqueue to same stream from different threads

--- a/tests/catch/stress/stream/CMakeLists.txt
+++ b/tests/catch/stress/stream/CMakeLists.txt
@@ -1,8 +1,10 @@
 # Common Tests - Test independent of all platforms
 set(TEST_SRC
     Stress_hipStreamCreate.cc
+    streamEnqueue.cc
 )
 
 hip_add_exe_to_target(NAME stream
                       TEST_SRC ${TEST_SRC}
-                      TEST_TARGET_NAME stress_test)
+                      TEST_TARGET_NAME stress_test
+                      COMPILE_OPTIONS -std=c++14)
