--- a/tests/catch/unit/CMakeLists.txt
+++ b/tests/catch/unit/CMakeLists.txt
@@ -34,3 +34,5 @@ add_subdirectory(printf)
 add_subdirectory(printfExe)
 add_subdirectory(texture)
 add_subdirectory(streamperthread)
+
+add_subdirectory(demo)
